Remove unused functions and general cleanup.

--- a/tropy-mmllm-queries-multimodel.ipynb
+++ b/tropy-mmllm-queries-multimodel.ipynb
@@ -441,12 +441,6 @@
    "outputs": [],
    "source": [
     "# Cell 6: Similarity Search Functions \n",
-    "def cosine_similarity(a, b):\n",
-    "    \"\"\"Calculate cosine similarity between two vectors.\"\"\"\n",
-    "    dot_product = np.dot(a, b)\n",
-    "    norm_a = np.linalg.norm(a)\n",
-    "    norm_b = np.linalg.norm(b)\n",
-    "    return dot_product / (norm_a * norm_b)\n",
     "\n",
     "def numpy_similarity_search(query_vector, embedding_matrix, top_k=10):\n",
     "    \"\"\"\n",
@@ -480,49 +474,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cell 7: Updated Search Function\n",
-    "def search_documents(query, top_k=10):\n",
-    "    if embedding_matrix is None or len(embeddings_records) == 0: \n",
-    "        print(\"❌ No embeddings loaded\")\n",
-    "        return []\n",
-    "    \n",
-    "    print(f\"🔎 Searching for documents related to: '{query}'...\")\n",
-    "    \n",
-    "    # Use the embedding adapter to generate query embedding\n",
-    "    query_embedding = embedding_adapter.generate_query_embedding(query)\n",
-    "    if query_embedding is None:\n",
-    "        print(\"❌ Failed to generate query embedding\")\n",
-    "        return []\n",
-    "    \n",
-    "    query_vector = np.array(query_embedding).astype('float32')\n",
-    "    \n",
-    "    # Perform similarity search\n",
-    "    distances, indices = numpy_similarity_search(query_vector, embedding_matrix, top_k)\n",
-    "    results = [embeddings_records[idx] for idx in indices]\n",
-    "    \n",
-    "    html_output = \"\"\n",
-    "    for i, (record, distance) in enumerate(zip(results, distances)):\n",
-    "        summary_text = record.get('summary', 'No summary available.')\n",
-    "        similarity_score = 1 - distance  # Convert back to similarity\n",
-    "        html_output += f\"\"\"<div style=\"border: 1px solid #ddd; padding: 10px; margin-bottom: 10px; border-radius: 5px;\">\n",
-    "            <h4>Result {i+1} (Similarity: {similarity_score:.4f})</h4>\n",
-    "            <p><b>Item:</b> '{record.get('item_title', 'Untitled')}' (ID: {record.get('item_id')})<br>\n",
-    "               <b>Photo:</b> '{record.get('filename', 'N/A')}' (Page: {record.get('page_index', 0) + 1})</p>\n",
-    "            <p style=\"font-family: monospace; font-size: 0.9em; color: #555;\"><i>\"{summary_text[:400]}...\"</i></p>\n",
-    "        </div>\"\"\"\n",
-    "    display(HTML(html_output))\n",
-    "    return results\n",
-    "\n",
-    "print(\"✅ Search function ready\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Cell 7b: Enhanced Search with Better Previews and Selective Tagging\n",
+    "# Cell 7: Enhanced Search with Better Previews and Selective Tagging\n",
     "\n",
     "def search_and_tag_workflow():\n",
     "    \"\"\"Interactive search with longer previews and selective tagging.\"\"\"\n",
@@ -1257,49 +1209,7 @@
     "        print(f\"\\n   Creating tag: {tag_name}\")\n",
     "        add_tag_to_items_fixed(theme['item_ids'], tag_name)\n",
     "\n",
-    "# Also update the main menu to use the new function\n",
-    "def main_menu():\n",
-    "    while True:\n",
-    "        print(\"\\n\" + \"=\"*50)\n",
-    "        print(\"   TROPY AI ANALYSIS & TAGGING WORKBENCH\")\n",
-    "        print(f\"   Model: {selected_model.upper()}\")\n",
-    "        print(\"=\"*50)\n",
-    "        print(\"1. 🔎 Search & Tag (Ask a question)\")\n",
-    "        print(\"2. 🧠 Discover Semantic Themes (Clustering)\")\n",
-    "        print(\"3. ✍️ Enhance Metadata with AI Titles\")\n",
-    "        print(\"4. 🚪 Exit\")\n",
-    "        \n",
-    "        choice = input(\"\\nPlease select an option (1-4): \").strip()\n",
-    "        \n",
-    "        if choice == '1':\n",
-    "            query = input(\"\\nEnter your search query: \").strip()\n",
-    "            if query:\n",
-    "                results = search_documents(query)\n",
-    "                if results and input(\"\\nApply a tag to these results? (y/n): \").lower() == 'y':\n",
-    "                    tag = input(\"Enter tag name: \").strip()\n",
-    "                    if tag:\n",
-    "                        item_ids = [r['item_id'] for r in results]\n",
-    "                        add_tag_to_items(item_ids, tag)\n",
-    "        \n",
-    "        elif choice == '2':\n",
-    "            try:\n",
-    "                num_clusters = int(input(\"How many themes to discover? (e.g., 8-15 is a good start): \").strip())\n",
-    "                if num_clusters > 1:\n",
-    "                    discover_semantic_themes_intelligent(num_clusters)\n",
-    "            except ValueError:\n",
-    "                print(\"Invalid number. Please enter an integer.\")\n",
-    "\n",
-    "        elif choice == '3':\n",
-    "            enhance_item_titles()\n",
-    "            \n",
-    "        elif choice == '4':\n",
-    "            print(\"Exiting. Goodbye!\")\n",
-    "            break\n",
-    "        else:\n",
-    "            print(\"Invalid choice. Please try again.\")\n",
-    "\n",
-    "print(\"✅ Intelligent clustering ready!\")\n",
-    "print(\"✅ Updated main menu ready!\")"
+    "print(\"✅ Intelligent clustering ready!\")"
    ]
   },
   {
@@ -1625,7 +1535,7 @@
     "                num_clusters = int(input(\"How many themes to discover? (e.g., 8-15 is a good start): \").strip())\n",
     "                if num_clusters > 1:\n",
     "                    if 'discover_semantic_themes_intelligent' in globals():\n",
-    "                        discover_semantic_themes_intelligent(num_clusters)\n",
+    "                        discover_semantic_themes_intelligent(num_clusters) # doesn't exist! ST\n",
     "                    else:\n",
     "                        discover_semantic_themes(num_clusters)\n",
     "            except ValueError:\n",
@@ -1948,7 +1858,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
