--- a/tropy-mmllm-queries-multimodel.ipynb
+++ b/tropy-mmllm-queries-multimodel.ipynb
@@ -9,16 +9,16 @@
     "# Tropy AI Analysis: Semantic Queries, Clustering, and Tagging\n",
     "\n",
     "### **Goal**\n",
-    "This notebook is the interactive analysis and organization component of the AI-powered research workflow. It uses the vector embeddings and AI-generated summaries created by the `tropy-mmllm-analysys.ipynb` notebook to enable powerful new ways of interacting with your collection.\n",
+    "This notebook is the interactive analysis and organization component of the AI-powered research workflow. It uses the vector embeddings and AI-generated summaries created by the `tropy-mmllm-analysis-multimodel.ipynb` notebook to enable powerful new ways of interacting with your collection.\n",
     "\n",
     "### **Features**\n",
-    "- **Semantic Search:** Go beyond keywords and ask complex, conceptual questions of your archive.\n",
+    "- **Semantic Search:** NLP queries goes beyond keywords.\n",
     "- **Automated Tagging:** Find relevant items based on your query and programmatically apply tags in Tropy.\n",
     "- **Theme Discovery (Clustering):** Automatically identify and group semantically similar documents to uncover hidden themes in your collection.\n",
     "- **Metadata Enhancement:** Use AI-suggested titles from your summaries to automatically update the metadata of your Tropy items.\n",
     "\n",
     "### **How to Use This Notebook**\n",
-    "1.  **Prerequisite:** Ensure you have already run the `tropy-mmllm-analysys.ipynb` notebook to create the `tropy_embeddings.json` and `output/item_summaries.json` files.\n",
+    "1.  **Prerequisite:** Ensure you have already run the `tropy-mmllm-analysis-multimodel.ipynb` notebook to create the `tropy_embeddings.json` and `output/item_summaries.json` files.\n",
     "2.  **Execution Order:** Run the code cells sequentially from top to bottom.\n",
     "    *   **Cell 1** loads all necessary libraries and your embeddings data.\n",
     "    *   **Cell 2** defines all the helper functions for searching, tagging, and analysis.\n",
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cell 1: Import Required Libraries (Updated - No FAISS)\n",
+    "# Cell 1: Import Required Libraries \n",
     "import json, requests, os, time\n",
     "import numpy as np\n",
     "from tqdm.notebook import tqdm\n",
